[package]
name = "ed25519-axolotl"
version = "2.0.0"
edition = "2021"
description = "Ed25519-like signatures with X25519 keys, Axolotl-style."
repository = "https://github.com/olivmath/ed25519-axolotl.git"
license = "MIT"
keywords = ["ed25519", "axolotl", "cryptography", "cryptocurrencies"]
categories = ["cryptography", "cryptography::cryptocurrencies", "algorithms"]
readme = "README.md"


[dependencies]
rand = "0.8.5"
